Fix Scheduler header cells alignment in the timelineWeek view if cellDuration is large (T657213)

--- a/styles/widgets/base/scheduler.less
+++ b/styles/widgets/base/scheduler.less
@@ -722,7 +722,7 @@
             .flex-container(row, nowrap);
         }
 
-        .dx-scheduler-header-panel-week-cell {
+        .dx-scheduler-header-panel-cell {
             flex-grow: 1;
             flex-basis: 0;
             justify-content: center;
